manifests/mrfriendly/smartbathroom/server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: smartbathroom-server
  namespace: mrfriendly
  labels:
    app.kubernetes.io/name: smartbathroom-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: smartbathroom-server
  template:
    metadata:
      labels:
        app.kubernetes.io/name: smartbathroom-server
    spec:
      automountServiceAccountToken: false
      containers:
      - name: server
        image: docker-registry.k8s.array21.dev/mrfriendly-smartbathroom-server:latest
        securityContext:
          capabilities:
            drop:
            - CAP_NET_RAW
        ports:
        - name: api
          containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: smartbathroom-server
  namespace: mrfriendly
spec:
  selector:
    app.kubernetes.io/name: smartbathroom-server
  ports:
  - name: api
    protocol: TCP
    port: 8080
    targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: smartbathroom-server
  namespace: mrfriendly
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-mrfriendly
spec:
  tls:
  - hosts:
    - smartbathroom.api.mrfriendly.nl
    secretName: smartbathroom-api-mrfriendly-nl
  rules:
  - host: smartbathroom.api.mrfriendly.nl
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: smartbathroom-server
            port:
              number: 8080
